add seller/orders && api documentation
